--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -1,5 +1,8 @@
-<div class="jumbotron">
+<div class ="text-center jumbotron">
 	<h1>Welcome to my app!</h1>
-	<p>Click here to <%= link_to 'sing up', '#', class: "btn btn-primary btn-lg" %></p>
+	<p>
+	 <%= link_to 'Log in', '#', class: "btn btn-primary btn-lg" %>
+	 <%= link_to 'Sing up', '#', class: "btn btn-primary btn-lg" %>
+	</p>
 </div>
 
